--- a/_src/assets/scss/components/_main.scss
+++ b/_src/assets/scss/components/_main.scss
@@ -5,10 +5,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Viga', sans-serif;
+  font-family: "Viga", sans-serif;
   &__keys {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    width: 80%;
     &--key {
       display: flex;
       flex-direction: column;
@@ -16,23 +17,25 @@
       align-items: center;
       border: 2px solid black;
       border-radius: 5px;
-      width: 60px;
-      height: 50px;
+      width: 80px;
+      height: 70px;
       margin: 0px 10px 0px 10px;
-      kbd{
-          color: white;
-          font-size: x-large;
+      transition: all 0.7s;
+      kbd {
+        color: white;
+        font-size: xx-large;
       }
-      .sound{
-          color: goldenrod;
-          text-transform: uppercase;
-          font-size: x-small;
+      .sound {
+        color: goldenrod;
+        text-transform: uppercase;
+        font-size: small;
       }
     }
   }
 }
 
-.golgen-border{
-    border-color: goldenrod;
-    box-shadow: 1px 0px 14px -1px rgba(231,166,26,1);
+.golden-border {
+  transform: scale(1.1);
+  border-color: goldenrod;
+  box-shadow: 1px 0px 14px -1px rgba(231, 166, 26, 1);
 }
